--- a/index.html
+++ b/index.html
@@ -1,146 +1,137 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>ESC 2025 Bewertungsbogen</title>
-  <style>
-    body {
-      font-family: sans-serif;
-      padding: 20px;
-      background: #f7f7f7;
-      max-width: 1200px;
-      margin: auto;
-    }
-    h1, h2 {
-      text-align: center;
-    }
-    table {
-      border-collapse: collapse;
-      width: 100%;
-      margin-bottom: 40px;
-    }
-    th, td {
-      border: 1px solid #aaa;
-      padding: 6px;
-      text-align: center;
-      font-size: 13px;
-    }
-    th {
-      background-color: #ddd;
-    }
-    input[type="number"] {
-      width: 50px;
-      text-align: center;
-    }
-    input[type="text"] {
-      width: 100%;
-    }
-  </style>
-  <script>
-    function calculateTotal(row) {
-      const fields = ['gesang', 'song', 'perf', 'style', 'stage', 'impact'];
-      let total = 0;
-      for (let field of fields) {
-        const val = parseInt(document.getElementById(`${field}-${row}`).value) || 0;
-        total += val;
-      }
-      document.getElementById(`gesamt-${row}`).textContent = total;
-    }
-  </script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ESC Bewertung 2025</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <header>
+    <h1>ESC Bewertung 2025</h1>
+  </header>
+  <main>
+    <div id="acts-container">
+      <!-- Beispielhafte Daten zum Start -->
+    </div>
+    <section id="ranking-section">
+      <h2>Dein ESC Ranking</h2>
+      <ol id="esc-ranking">
+        <!-- Dynamisches Ranking -->
+      </ol>
+    </section>
+    <button id="export-pdf">PDF Export</button>
+  </main>
 
-<h1>ESC 2025 – Bewertungsbogen</h1>
-<h2>Finale – 17. Mai | Malmö</h2>
+  <script>
+    const acts = [
+      { land: "Norwegen", künstler: "Kyle Alessandro", song: "Lighter", flagge: "🇳🇴" },
+      { land: "Luxemburg", künstler: "Laura Thorn", song: "La Poupée Monte Le Son", flagge: "🇱🇺" },
+      { land: "Estland", künstler: "Tommy Cash", song: "Espresso Macchiato", flagge: "🇪🇪" },
+      { land: "Israel", künstler: "Yuval Raphael", song: "New Day Will Rise", flagge: "🇮🇱" },
+      { land: "Litauen", künstler: "Katarsis", song: "Tavo Akys", flagge: "🇱🇹" },
+      { land: "Spanien", künstler: "Melody", song: "ESA DIVA", flagge: "🇪🇸" },
+      { land: "Ukraine", künstler: "Ziferblat", song: "Bird of Pray", flagge: "🇺🇦" },
+      { land: "Vereinigtes Königreich", künstler: "Remember Monday", song: "What The Hell Just Happened?", flagge: "🇬🇧" },
+      { land: "Österreich", künstler: "JJ", song: "Wasted Love", flagge: "🇦🇹" },
+      { land: "Island", künstler: "VÆB", song: "RÓA", flagge: "🇮🇸" },
+      { land: "Lettland", künstler: "Tautumeitas", song: "Bur Man Laimi", flagge: "🇱🇻" },
+      { land: "Niederlande", künstler: "Claude", song: "C’est La Vie", flagge: "🇳🇱" },
+      { land: "Finnland", künstler: "Erika Vikman", song: "ICH KOMME", flagge: "🇫🇮" },
+      { land: "Italien", künstler: "Lucio Corsi", song: "Volevo Essere Un Duro", flagge: "🇮🇹" },
+      { land: "Polen", künstler: "Justyna Steczkowska", song: "GAJA", flagge: "🇵🇱" },
+      { land: "Deutschland", künstler: "Abor & Tynna", song: "Baller", flagge: "🇩🇪" },
+      { land: "Griechenland", künstler: "Klavdia", song: "Asteromáta", flagge: "🇬🇷" },
+      { land: "Armenien", künstler: "PARG", song: "SURVIVOR", flagge: "🇦🇲" },
+      { land: "Schweiz", künstler: "Zoë Më", song: "Voyage", flagge: "🇨🇭" },
+      { land: "Malta", künstler: "Miriana Conte", song: "SERVING", flagge: "🇲🇹" },
+      { land: "Portugal", künstler: "NAPA", song: "Deslocado", flagge: "🇵🇹" },
+      { land: "Dänemark", künstler: "Sissal", song: "Hallucination", flagge: "🇩🇰" },
+      { land: "Schweden", künstler: "KAJ", song: "Bara Bada Bastu", flagge: "🇸🇪" },
+      { land: "Frankreich", künstler: "Louane", song: "maman", flagge: "🇫🇷" },
+      { land: "San Marino", künstler: "Gabry Ponte", song: "Tutta L’Italia", flagge: "🇸🇲" },
+      { land: "Albanien", künstler: "Shkodra Elektronike", song: "Zjerm", flagge: "🇦🇱" }
+    ];
 
-<table>
-  <thead>
-    <tr>
-      <th>#</th><th>Land</th><th>Künstler:in / Song</th>
-      <th>Gesang</th><th>Song</th><th>Performance</th>
-      <th>Styling</th><th>Staging</th><th>Eindruck</th>
-      <th>Gesamt</th><th>Platz</th><th>Punkte</th>
-    </tr>
-  </thead>
-  <tbody>
-    <!-- BEGIN: Tabelle generiert -->
-    <!-- Kopiere diese Vorlage pro Zeile -->
+    const criteria = ["gesang", "song", "performance", "styling", "staging", "eindruck"];
 
-    <!-- ACTS: -->
+    function createActRow(act, index) {
+      const container = document.createElement("div");
+      container.className = "act";
+      container.dataset.index = index;
+      container.innerHTML = `
+        <h3>${act.flagge} ${act.land} – ${act.künstler} / ${act.song}</h3>
+        <div class="inputs">
+          ${criteria.map(crit => `
+            <label>${crit.charAt(0).toUpperCase() + crit.slice(1)}:
+              <input type="number" min="0" max="10" value="0" data-crit="${crit}" />
+            </label>
+          `).join("")}
+          <p>Gesamt: <span class="gesamt">0</span> / 60</p>
+          <p>Dein Platz: <span class="platz">–</span></p>
+          <label>Punkte (1–12):
+            <input type="number" min="0" max="12" class="esc-punkte" />
+          </label>
+        </div>
+      `;
+      return container;
+    }
 
-<script>
-const acts = [
-  ["🇳🇴", "Kyle Alessandro – Lighter"],
-  ["🇱🇺", "Laura Thorn – La Poupée Monte Le Son"],
-  ["🇪🇪", "Tommy Cash – Espresso Macchiato"],
-  ["🇮🇱", "Yuval Raphael – New Day Will Rise"],
-  ["🇱🇹", "Katarsis – Tavo Akys"],
-  ["🇪🇸", "Melody – ESA DIVA"],
-  ["🇺🇦", "Ziferblat – Bird of Pray"],
-  ["🇬🇧", "Remember Monday – What The Hell Just Happened?"],
-  ["🇦🇹", "JJ – Wasted Love"],
-  ["🇮🇸", "VÆB – RÓA"],
-  ["🇱🇻", "Tautumeitas – Bur Man Laimi"],
-  ["🇳🇱", "Claude – C’est La Vie"],
-  ["🇫🇮", "Erika Vikman – ICH KOMME"],
-  ["🇮🇹", "Lucio Corsi – Volevo Essere Un Duro"],
-  ["🇵🇱", "Justyna Steczkowska – GAJA"],
-  ["🇩🇪", "Abor & Tynna – Baller"],
-  ["🇬🇷", "Klavdia – Asteromáta"],
-  ["🇦🇲", "PARG – SURVIVOR"],
-  ["🇨🇭", "Zoë Më – Voyage"],
-  ["🇲🇹", "Miriana Conte – SERVING"],
-  ["🇵🇹", "NAPA – Deslocado"],
-  ["🇩🇰", "Sissal – Hallucination"],
-  ["🇸🇪", "KAJ – Bara Bada Bastu"],
-  ["🇫🇷", "Louane – maman"],
-  ["🇸🇲", "Gabry Ponte – Tutta L’Italia"],
-  ["🇦🇱", "Shkodra Elektronike – Zjerm"]
-];
+    function updateAllGesamt() {
+      const actElements = document.querySelectorAll(".act");
+      const results = [];
 
-let html = "";
-acts.forEach((act, i) => {
-  const row = i + 1;
-  html += `<tr>
-    <td>${row}</td>
-    <td>${act[0]}</td>
-    <td>${act[1]}</td>
-    <td><input type="number" min="0" max="10" id="gesang-${row}" oninput="calculateTotal(${row})"></td>
-    <td><input type="number" min="0" max="10" id="song-${row}" oninput="calculateTotal(${row})"></td>
-    <td><input type="number" min="0" max="10" id="perf-${row}" oninput="calculateTotal(${row})"></td>
-    <td><input type="number" min="0" max="10" id="style-${row}" oninput="calculateTotal(${row})"></td>
-    <td><input type="number" min="0" max="10" id="stage-${row}" oninput="calculateTotal(${row})"></td>
-    <td><input type="number" min="0" max="10" id="impact-${row}" oninput="calculateTotal(${row})"></td>
-    <td id="gesamt-${row}">0</td>
-    <td><input type="text" /></td>
-    <td><input type="number" min="0" max="12" /></td>
-  </tr>`;
-});
-document.write(html);
-</script>
+      actElements.forEach((actEl, index) => {
+        let gesamt = 0;
+        const inputs = actEl.querySelectorAll("input[data-crit]");
+        inputs.forEach(input => {
+          gesamt += parseInt(input.value) || 0;
+        });
+        actEl.querySelector(".gesamt").textContent = gesamt;
+        results.push({ index, gesamt, element: actEl });
+      });
 
-  </tbody>
-</table>
+      results.sort((a, b) => b.gesamt - a.gesamt);
+      results.forEach((res, i) => {
+        res.element.querySelector(".platz").textContent = i + 1;
+      });
+    }
 
-<h2>🎯 Deine Top 10</h2>
-<table>
-  <thead>
-    <tr><th>Platz</th><th>Land / Song</th><th>Punkte</th></tr>
-  </thead>
-  <tbody>
-    <tr><td>1</td><td><input type="text" /></td><td>12</td></tr>
-    <tr><td>2</td><td><input type="text" /></td><td>10</td></tr>
-    <tr><td>3</td><td><input type="text" /></td><td>8</td></tr>
-    <tr><td>4</td><td><input type="text" /></td><td>7</td></tr>
-    <tr><td>5</td><td><input type="text" /></td><td>6</td></tr>
-    <tr><td>6</td><td><input type="text" /></td><td>5</td></tr>
-    <tr><td>7</td><td><input type="text" /></td><td>4</td></tr>
-    <tr><td>8</td><td><input type="text" /></td><td>3</td></tr>
-    <tr><td>9</td><td><input type="text" /></td><td>2</td></tr>
-    <tr><td>10</td><td><input type="text" /></td><td>1</td></tr>
-  </tbody>
-</table>
+    function updateRanking() {
+      const rankingList = document.getElementById("esc-ranking");
+      rankingList.innerHTML = "";
 
+      const actElements = Array.from(document.querySelectorAll(".act"));
+      const pointsData = actElements.map((el, i) => {
+        const points = parseInt(el.querySelector(".esc-punkte").value) || 0;
+        return { index: i, points, label: el.querySelector("h3").textContent };
+      });
+
+      pointsData.sort((a, b) => b.points - a.points);
+      pointsData.forEach(entry => {
+        const li = document.createElement("li");
+        li.textContent = `${entry.label} – ${entry.points} Punkte`;
+        rankingList.appendChild(li);
+      });
+    }
+
+    function init() {
+      const container = document.getElementById("acts-container");
+      acts.forEach((act, i) => {
+        const row = createActRow(act, i);
+        container.appendChild(row);
+      });
+
+      document.addEventListener("input", e => {
+        if (e.target.matches("input[data-crit]")) {
+          updateAllGesamt();
+        } else if (e.target.matches(".esc-punkte")) {
+          updateRanking();
+        }
+      });
+    }
+
+    init();
+  </script>
 </body>
 </html>
