--- a/index.html
+++ b/index.html
@@ -5,6 +5,95 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ESC Bewertung 2025</title>
   <link rel="stylesheet" href="style.css">
+   <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(120deg, #1d0049, #520057);
+      color: #fff;
+      margin: 0;
+      padding: 0;
+    }
+
+    header {
+      background-color: #220033;
+      padding: 1rem;
+      text-align: center;
+      box-shadow: 0 0 10px #ff00ff;
+    }
+
+    h1, h2 {
+      margin: 0.5em 0;
+      text-shadow: 0 0 5px #ff66ff;
+    }
+
+    main {
+      padding: 1rem;
+    }
+
+    .act {
+      background: rgba(255, 255, 255, 0.05);
+      border: 1px solid #ffccff22;
+      margin: 1rem 0;
+      padding: 1rem;
+      border-radius: 10px;
+      box-shadow: 0 0 10px #ff66ff33;
+    }
+
+    .inputs {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 1rem;
+      margin-top: 0.5rem;
+    }
+
+    label {
+      display: flex;
+      flex-direction: column;
+      font-size: 0.9rem;
+    }
+
+    input[type="number"] {
+      padding: 0.3rem;
+      font-size: 1rem;
+      border-radius: 5px;
+      border: none;
+      margin-top: 0.3rem;
+    }
+
+    #ranking-section {
+      margin-top: 2rem;
+    }
+
+    #esc-ranking {
+      background-color: rgba(255, 255, 255, 0.05);
+      padding: 1rem;
+      border-radius: 10px;
+      box-shadow: 0 0 5px #ffffff44;
+    }
+
+    #export-pdf {
+      margin: 2rem auto;
+      display: block;
+      background: #ff00aa;
+      border: none;
+      padding: 1rem 2rem;
+      font-size: 1.1rem;
+      color: white;
+      border-radius: 8px;
+      cursor: pointer;
+      box-shadow: 0 0 10px #ff00aa88;
+    }
+
+    #export-pdf:hover {
+      background: #ff33bb;
+    }
+
+    @media (max-width: 768px) {
+      .inputs {
+        flex-direction: column;
+      }
+    }
+  </style>
 </head>
 <body>
   <header>
