--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ESC Bewertung 2025</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Rubik:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/3/34/ESC_2023_logo.svg" alt="ESC Logo">
     <h1>ESC Bewertung 2025</h1>
   </header>
   <main>
