--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>ESC Bewertung 2025</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="Eurovision_Song_Contest_2025_logo.svg.png" rel="stylesheet">
+  <img src="Eurovision_Song_Contest_2025_logo.svg.png" alt="ESC Logo">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
