--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <title>ESC Bewertung 2025</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <img src="Eurovision_Song_Contest_2025_logo.svg.png" alt="ESC Logo">
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Rubik:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/3/34/ESC_2023_logo.svg" alt="ESC Logo">
+    <img src="Eurovision_Song_Contest_2025_logo.svg.png" alt="ESC Logo">
     <h1>ESC Bewertung 2025</h1>
   </header>
   <main>
