--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header>
-    <img src="assets/esc-logo.png" alt="ESC Logo">
+    <img src="assetsEurovision_Song_Contest_2025_logo.svg.png" alt="ESC Logo">
     <h1>ESC Bewertung 2025</h1>
   </header>
   <main>
